# Desert-Raid

./: .gitignore  CMakeLists.txt  README.md  win_CMakeLists.txt
code/: Aircraft.hpp  Application.hpp  Button.hpp  Category.hpp  Command.hpp  CommandQueue.hpp  Component.hpp  Container.hpp  Entity.hpp  Game.hpp  GameState.hpp  Label.hpp  LoadingState.hpp  MenuState.hpp  ParallelTask.hpp  PauseState.hpp  Player.hpp  ResourceHolder.hpp  ResourceIdentifiers.hpp  SceneNode.hpp  SpriteNode.hpp  State.hpp  StateIdentifiers.hpp  StateStack.hpp  TitleState.hpp  Utility.hpp  World.hpp  main.cpp
code/Components/: Button.hpp  Component.hpp  Container.hpp  Label.hpp
code/Effects/: Animation.hpp  BloomEffect.hpp  MusicPlayer.hpp  Particle.hpp  PostEffect.hpp  SoundEffect.hpp
code/Game/: Aircraft.hpp  Application.hpp  Category.hpp  Command.hpp  CommandQueue.hpp  Entity.hpp  Player.hpp  SceneNode.hpp  SpriteNode.hpp  TextNode.hpp  World.hpp
code/Objects/: Aircraft.hpp  EmitterNode.hpp  Entity.hpp  Particle.hpp  ParticleNode.hpp  Pickup.hpp  Projectile.hpp  SceneNode.hpp  SoundNode.hpp  SpriteNode.hpp  TextNode.hpp  World.hpp
code/States/: GameOverState.hpp  GameState.hpp  LoadingState.hpp  MenuState.hpp  ParallelTask.hpp  PauseState.hpp  SettingsState.hpp  StateStack.hpp  TitleState.hpp
code/Utils/: ResourceHolder.hpp  ResourceIdentifiers.hpp  Utility.hpp
docs/: graph.puml  objects.puml  states.puml
